# modern-python

./: .env.example  .gitignore  .pre-commit-config.yaml  .yamllint  CLAUDE.md  CONTRIBUTING.md  LICENSE  MODERN_PYTHON.md  Makefile  README.md  c4-architecture.md  development-plan.md  package-lock.json  project_plan_phase_1.md  pyproject.toml  pytest.ini  requirements-common.txt  requirements-dev.txt.example  technical_considerations.md
.claude/: CLAUDE.md  pair_programming.md  project_plan_phase_1.md  technical_considerations.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: cd.yml  ci-full.yml  ci.yml  docker.yml  docs.yml
docs/: Makefile  api.rst  conf.py  index.rst
scripts/: build.sh  lint.sh  setup.sh  test.sh
src/: __init__.py  calculator.py
tests/: __init__.py  test_calculator.py  test_example_calculator.py  test_setup.py
